k8s/litecart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycart
  namespace: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mycart
  template:
    metadata:
      labels:
        app: mycart
    spec:
      nodeSelector:
        type: sg
      containers:
      - name: mycart
        image: shurco/mycart:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: mycart-storage
          mountPath: /lc_base
          subPath: lc_base 
        - name: mycart-storage
          mountPath: /lc_digitals
          subPath: lc_digitals
        - name: mycart-storage
          mountPath: /lc_uploads
          subPath: lc_uploads
        - name: mycart-storage
          mountPath: /site
          subPath: site
      volumes:
      - name: mycart-storage
        persistentVolumeClaim:
          claimName: mycart-pvc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mycart-ingress
  namespace: shop
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - domain
    secretName: mycart-tls
  rules:
  - host: domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mycart-service
            port:
              number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: mycart-service
  namespace: shop
spec:
  selector:
    app: mycart
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
